--- a/src/KeePassControls/EntryItemListView.xaml
+++ b/src/KeePassControls/EntryItemListView.xaml
@@ -11,6 +11,8 @@
     d:DesignWidth="400">
 
     <UserControl.Resources>
+        <local:UriVisibilityConverter x:Key="uriVisibilityConverter"/>
+
         <!-- TODO: Switch to x:Bind when it works. As of 2/15/2016, this causes the error: XBF generation error code 0x09c4 -->
         <DataTemplate x:Name="KeePassGroupTemplate">
             <Grid>
@@ -36,8 +38,7 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="10,0,0,0" Text="{Binding Path=Title}" Style="{ThemeResource EntryItemTitleStyle}" TextTrimming="WordEllipsis" />
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" Text="{Binding Path=UserName}" Style="{ThemeResource EntryItemUserNameStyle}" TextTrimming="WordEllipsis" />
-                <!-- TODO: Only show if valid URI -->
-                <AppBarButton Grid.Column="1" Grid.RowSpan="2" Label="Website" Click="GoToWebsite">
+                <AppBarButton Grid.Column="1" Grid.RowSpan="2" Label="Website" Click="GoToWebsite" Visibility="{Binding Converter={StaticResource uriVisibilityConverter}}">
                     <AppBarButton.Icon>
                         <SymbolIcon Symbol="Globe" />
                     </AppBarButton.Icon>
