--- a/src/KeePassWin/Themes/KeePassWinStyles.xaml
+++ b/src/KeePassWin/Themes/KeePassWinStyles.xaml
@@ -14,6 +14,10 @@
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
 
+    <x:Double x:Key="NarrowMinWidth">0</x:Double>
+    <x:Double x:Key="NormalMinWidth">521</x:Double>
+    <x:Double x:Key="WideMinWidth">1200</x:Double>
+
     <Style x:Key="SplitViewMenuButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderBrush" Value="Transparent" />
