--- a/src/KeePassWin/Views/SearchPage.xaml
+++ b/src/KeePassWin/Views/SearchPage.xaml
@@ -6,31 +6,23 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="using:KeePassWin.Mvvm"
+    xmlns:keepassControls="using:KeePass.Controls"
     xmlns:prismMvvm="using:Prism.Windows.Mvvm"
     xmlns:models="using:KeePass.Models"
     prismMvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Tag="{Binding}" x:Name="root" >
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <AutoSuggestBox x:Name="SearchBox" Text="{x:Bind Path=Model.Text, Mode=TwoWay}" TextChanged="AutoSuggestBox_TextChanged" QueryIcon="Find" HorizontalAlignment="Stretch" />
-        <ListView Grid.Row="1"
-                  ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}"
-                  HorizontalAlignment="Stretch" VerticalAlignment="Top" HorizontalContentAlignment="Stretch"
-                  IsItemClickEnabled="True"
-                  mvvm:MvvmExtensions.Command="{x:Bind Model.ItemClickCommand, Mode=OneWay}"
-                  Margin="0,10,0,0"
-                  ItemTemplate="{StaticResource KeePassEntryTemplate}">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                </Style>
-            </ListView.ItemContainerStyle>
-        </ListView>
+        <keepassControls:EntryItemListView Grid.Row="1" Margin="0,10,0,0"
+                ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}"
+                Command="{x:Bind Path=Model.ItemClickCommand, Mode=OneTime}"
+                CopyCommand="{x:Bind Path=Model.CopyCommand, Mode=OneTime}" />
 
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
