--- a/src/KeePassWin/Views/SearchPage.xaml
+++ b/src/KeePassWin/Views/SearchPage.xaml
@@ -4,6 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:KeePassWin.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="using:KeePassWin.Mvvm"
     xmlns:keepassControls="using:KeePass.Controls"
@@ -18,8 +20,16 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <AutoSuggestBox x:Name="SearchBox" Text="{x:Bind Path=Model.Text, Mode=TwoWay}" TextChanged="AutoSuggestBox_TextChanged" QueryIcon="Find" HorizontalAlignment="Stretch" />
+        <AutoSuggestBox x:Name="SearchBox" Text="{x:Bind Path=Model.Text, Mode=TwoWay}" QueryIcon="Find" HorizontalAlignment="Stretch">
+            <Interactivity:Interaction.Behaviors>
+                <core:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding ElementName=SearchBox}">
+                    <core:InvokeCommandAction Command="{x:Bind Model.TextChangedCommand}" />
+                </core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </AutoSuggestBox>
+
         <keepassControls:EntryItemListView Grid.Row="1" Margin="0,10,0,0"
+                IsTabStop="True" TabIndex="-1"
                 ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}"
                 Command="{x:Bind Path=Model.ItemClickCommand, Mode=OneTime}"
                 CopyCommand="{x:Bind Path=Model.CopyCommand, Mode=OneTime}" />
