--- a/src/KeePassWin/Views/MenuView.xaml
+++ b/src/KeePassWin/Views/MenuView.xaml
@@ -36,7 +36,7 @@
             <VisualStateGroup x:Name="MenuStates">
                 <VisualState x:Name="Wide">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="1280" />
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource WideMinWidth}" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="menuItemsControl.Margin" Value="0" />
@@ -44,7 +44,7 @@
                 </VisualState>
                 <VisualState x:Name="Medium">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="800" />
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource NormalMinWidth}" />
                     </VisualState.StateTriggers>
                 </VisualState>
                 <VisualState x:Name="Narrow" />
