--- a/src/KeePassWin/Views/EntryViewDialog.xaml
+++ b/src/KeePassWin/Views/EntryViewDialog.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="{x:Bind Path=Entry.Title}"
     PrimaryButtonText="Close">
 
     <ContentDialog.Template>
@@ -60,7 +59,7 @@
                                                 MaxHeight="{ThemeResource ContentDialogTitleMaxHeight}" >
                                         <ContentControl.Template>
                                             <ControlTemplate TargetType="ContentControl">
-                                                <ContentPresenter 
+                                                <ContentPresenter
                                                             Content="{TemplateBinding Content}"
                                                             MaxLines="2"
                                                             TextWrapping="Wrap"
@@ -111,47 +110,57 @@
 
     <Grid>
         <Grid.Resources>
-            <x:Double x:Key="TextBoxWidth">250</x:Double>
+            <x:Double x:Key="TextBoxWidth">280</x:Double>
         </Grid.Resources>
 
-        <ListView>
-            <ListViewItem>
-                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
-                    <TextBox Header="Username" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.UserName}" />
-                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.UserName}">
+        <ListView Margin="0,10,0,0">
+            <ListViewItem IsTabStop="False">
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
+                    <TextBox Header="Title" TabIndex="1" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Title, Mode=TwoWay}" />
+                    <Button Background="Transparent" IsTabStop="False" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Title, Mode=OneWay}">
                         <Button.Content>
                             <SymbolIcon Symbol="Copy" />
                         </Button.Content>
                     </Button>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem>
-                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
+            <ListViewItem IsTabStop="False">
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
+                    <TextBox Header="Username" TabIndex="2" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.UserName, Mode=TwoWay}" />
+                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.UserName, Mode=OneWay}">
+                        <Button.Content>
+                            <SymbolIcon Symbol="Copy" />
+                        </Button.Content>
+                    </Button>
+                </StackPanel>
+            </ListViewItem>
+            <ListViewItem IsTabStop="False">
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
                     <StackPanel>
-                        <PasswordBox x:Name="passwordBox" Header="Password" Width="{StaticResource TextBoxWidth}" Password="{x:Bind Path=Entry.Password}" PasswordRevealMode="Hidden" />
+                        <PasswordBox x:Name="passwordBox" TabIndex="3" Header="Password" Width="{StaticResource TextBoxWidth}" Password="{x:Bind Path=Entry.Password, Mode=TwoWay}" PasswordRevealMode="Hidden" />
                         <CheckBox Content="Show password" IsChecked="False" Checked="PasswordChecked" Unchecked="PasswordChecked" />
                     </StackPanel>
-                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Password}">
+                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Password, Mode=OneWay}">
                         <Button.Content>
                             <SymbolIcon Symbol="Copy" />
                         </Button.Content>
                     </Button>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem>
-                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
-                    <TextBox Header="Website" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Url}" />
-                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Url}">
+            <ListViewItem IsTabStop="False">
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
+                    <TextBox Header="Website" TabIndex="4" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Url, Mode=TwoWay}" />
+                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Url, Mode=OneWay}">
                         <Button.Content>
                             <SymbolIcon Symbol="Copy" />
                         </Button.Content>
                     </Button>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem>
-                <StackPanel Margin="0,20,0,0" Orientation="Horizontal">
-                    <TextBox Header="Notes" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Notes}" AcceptsReturn="True" TextWrapping="Wrap" Height="172" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Notes}">
+            <ListViewItem IsTabStop="False">
+                <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
+                    <TextBox Header="Notes" TabIndex="5" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Notes, Mode=TwoWay}" AcceptsReturn="True" TextWrapping="Wrap" Height="172" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                    <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=Copy}" CommandParameter="{x:Bind Path=Entry.Notes, Mode=OneWay}">
                         <Button.Content>
                             <SymbolIcon Symbol="Copy" />
                         </Button.Content>
