--- a/src/KeePassWin/Views/EntryViewDialog.xaml
+++ b/src/KeePassWin/Views/EntryViewDialog.xaml
@@ -6,7 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    PrimaryButtonText="Close">
+    PrimaryButtonText="Save" PrimaryButtonCommand="{x:Bind Save}"
+    SecondaryButtonText="Cancel" SecondaryButtonCommand="{x:Bind Cancel}">
 
     <ContentDialog.Template>
         <ControlTemplate TargetType="ContentDialog">
