--- a/src/KeePassWin/Views/MenuView.xaml
+++ b/src/KeePassWin/Views/MenuView.xaml
@@ -51,17 +51,39 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
-        <StackPanel>
-            <ItemsControl x:Name="menuItemsControl"
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <StackPanel>
+                <ItemsControl x:Name="menuItemsControl"
                       Margin="0,48,0,0"
                       IsTabStop="False"
                       ItemTemplate="{StaticResource MenuItemTemplate}"
-                      ItemsSource="{x:Bind Path=ConcreteDataContext.Commands}" />
+                      ItemsSource="{x:Bind Path=Model.Commands}" />
 
-            <ItemsControl x:Name="databasesControl"
+                <ItemsControl x:Name="databasesControl"
                       IsTabStop="False"
                       ItemTemplate="{StaticResource MenuItemTemplate}"
-                      ItemsSource="{x:Bind Path=ConcreteDataContext.Databases}" />
-        </StackPanel>
+                      ItemsSource="{x:Bind Path=Model.Databases}" />
+            </StackPanel>
+
+            <Button Grid.Row="1"
+                    Style="{StaticResource SplitViewMenuButtonStyle}"
+                    ToolTipService.ToolTip="Settings">
+                <Button.Flyout>
+                    <Flyout>
+                        <TextBlock IsTextSelectionEnabled="True" Text="{x:Bind Version}" />
+                    </Flyout>
+                </Button.Flyout>
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Symbol="Setting" Style="{StaticResource SplitViewMenuSymbolIconStyle}" />
+                    <TextBlock AutomationProperties.AccessibilityView="Raw"
+                                   Style="{StaticResource SplitViewMenuItemTextStyle}"
+                                   Text="Settings" />
+                </StackPanel>
+            </Button>
+        </Grid>
     </Grid>
 </UserControl>
